--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,26 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+						<li class="timeline-inverted">
+							<div class="timeline-meta">
+								<div class="meta_details">by Business Wire</div>
+							</div>
+							<div class="timeline-icon">
+								<div class="date">Feb.
+									<span>11</span></div>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-body">
+									<div class="post-item">
+										<h2 class="post-title">
+											<a href="http://www.businesswire.com/news/home/20160210005283/en/Orion-Health-Showcase-Client-Successes-HIMSS16">Orion Health to Showcase Client Successes at HIMSS16</a>
+										</h2>
+										<div class="post-content"><p>Orion Health, a population health management and healthcare integration company, today announced it will showcase client success stories at the Healthcare Information and Management Systems Society 2016 Annual Conference &amp; Exhibition via mainstage presentations and in-booth demonstrations. Additionally, at HIMSS&hellip;</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li>
 							<div class="timeline-meta">
 								<div class="meta_details">by Healthcare Informatics</div>
