Added new news article

--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,29 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+					<li>
+						<div class="timeline-meta">
+							<div class="meta_details">by Healthcare IT News</div>
+						</div>
+						<div class="timeline-icon">
+							<div class="date">Feb.
+								<span>19</span>
+							</div>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-body">
+								<div class="post-item">
+									<h2 class="post-title">
+										<a href="http://www.healthcareitnews.com/news/orion-health-unwrap-precision-medicine-medicare-aco-management-apps-himss16" target="_blank">Orion Health to unwrap precision medicine, Medicare ACO management apps at HIMSS16</a>
+									</h2>
+									<div class="post-content">
+										<p>Orion Health at HIMSS16 will unveil a data platform aimed at enabling precision maedicine anda  new management app geared towards participants in the Medicare Shared Savings Accountable Care Organization Program. The new iteration of Amadeus, for instance, is meant to help providers to move from the "who" of population health&hellip;</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+
 						<li class="timeline-inverted">
 							<div class="timeline-meta">
 								<div class="meta_details">by Business Wire</div>
