adding new news article and pdf for directory of physicians

--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,29 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+					<li class="timeline-inverted">
+						<div class="timeline-meta">
+							<div class="meta_details">by Physicians Practice</div>
+						</div>
+						<div class="timeline-icon">
+							<div class="date">Feb.
+								<span>26</span>
+							</div>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-body">
+								<div class="post-item">
+									<h2 class="post-title">
+         								<a href="{{ path('_p_d_f_view', {'file': 'SHP-Physicians-Directory.pdf'}) }}">A Model of Care Coordination in Scottsdale</a>
+         							</h2>
+         							<div class="post-content">
+         								<p>Scottsdale Health Partners has used IT and care coordinators to get physicians and hospitals working hand-in-hand in a value based environment. Scottsdale Health Partners (SHP) is more than just a joint venture between the HonorHealth (formerly Scottsdale Healthcare) hospital system and approximately 700 physicians&hellip;</p>
+         							</div>
+         						</div>
+         					</div>
+         				</div>
+         			</li>
+
 					<li>
 						<div class="timeline-meta">
 							<div class="meta_details">by Healthcare IT News</div>
