--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -30,7 +30,7 @@
 							<div class="timeline-body">
 								<div class="post-item">
 									<h2 class="post-title">
-         								<a href="{{ path('_p_d_f_view', {'file': 'SHP-Physicians-Directory.pdf'}) }}">A Model of Care Coordination in Scottsdale</a>
+         								<a href="{{ path('_p_d_f_view', {'file': 'SHP-Model-of-Care.pdf'}) }}">A Model of Care Coordination in Scottsdale</a>
          							</h2>
          							<div class="post-content">
          								<p>Scottsdale Health Partners has used IT and care coordinators to get physicians and hospitals working hand-in-hand in a value based environment. Scottsdale Health Partners (SHP) is more than just a joint venture between the HonorHealth (formerly Scottsdale Healthcare) hospital system and approximately 700 physicians&hellip;</p>
