Adding new news article to the website

--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,28 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+					<li>
+						<div class="timeline-meta">
+							<div class="meta_details">by American Journal of Medical Care</div>
+						</div>
+						<div class="timeline-icon">
+							<div class="date">April
+								<span>11</span>
+							</div>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-body">
+								<div class="post-item">
+									<h2 class="post-title">
+										<a href="https://shar.es/1jr0dB">Dr. James Whitfill: Coordinating Care on a Virtual and Physical Level</a>
+									</h2>
+									<div clas"post-content">
+										<p>Scottsdale Health Partners has improved coordinated care on both a physical and virtual level through the creation of a secure texting connection for real-time collaboration, James Whitfill, MD, chief medical officer of Scottsdale Health Partners, explained at the National Association of Accountable Care Organization's Spring 2016 Conference&hellip;</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-meta">
 							<div class="meta_details">by Physicians Practice</div>
