Multiple Updates to Home page content

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -243,7 +243,7 @@
 			<div class="entry-content">
 				<p>{{ company_name }} was established in the summer of 2012 as a joint venture between Scottsdale Healthcare Hospitals (now HonorHealth) and Scottsdale Physician Organization.</p>
 				<p>SHP launched with 430 physicians, one insurance contract, and about 3,500 patients.</p>
-				<p>Today SHP has seven contracts with major insurance companies and now has over <strong>700</strong> physician members serving more than <strong></strong>30,000</strong> patients in the community.</p>
+				<p>Today SHP has seven contracts with major insurance companies and now has over <strong>700</strong> physician members serving more than <strong></strong>35,000</strong> patients in the community.</p>
 				<p>SHP represents a unique collaboration between independent community physicians and a community hospital system where all parties share a common mission and vision to improve healthcare in the local community.</p>
 			</div>
 		</div>
@@ -441,13 +441,13 @@
 				</div>
 				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
 					<!-- Icon -->
-					<div class="count-number" data-count="390"><span class="counter plus"></span></div>
+					<div class="count-number" data-count="450"><span class="counter plus"></span></div>
 					<!-- Title -->
 					<h5>Locations</h5>
 				</div>
 				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
 					<!-- Icon -->
-					<div class="count-number" data-count="59"><span class="counter"></span></div>
+					<div class="count-number" data-count="65"><span class="counter"></span></div>
 					<!-- Title -->
 					<h5>Specialties</h5>
 				</div>
@@ -517,9 +517,9 @@
 		<nav>
 			<ul class="footer-blog">
 				<!-- List Items -->
-				<li><a href="{{ path('news') }}">Shared Savings Program ACO Spotlight Newsletter</a></li>
-				<li><a href="{{ path('news') }}">Journey to MSSP Management with Tailored ACO Web-Based Solution</a></li>
-				<li><a href="{{ path('news') }}">Going At Risk - A Vision for Connected Care</a></li>
+				<li><a href="{{ path('news') }}">Coordinating Care on a Virtual and Physical Level</a></li>
+				<li><a href="{{ path('news') }}">A Model of Care Coordination in Scottsdale</a></li>
+				<li><a href="{{ path('news') }}">Orion Health to unwrap precision medicine</a></li>
 			</ul>
 		</nav>
 	</div>
