--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -57,7 +57,7 @@
 						{#<h2 class="title">Why Choose Us.</h2>#}
 					{#</div>#}
 					<!-- Content -->
-					<p>{{ company_name }} provides value-based patient care through nearly 300 practice locations and 5 local hospitals.</p>
+					<p>{{ company_name }} provides value-based patient care through more than 450 practice locations and 5 local hospitals.</p>
 					<p>SHP physician practices accept multiple insurance plans offering convenience for patients including Commercial Insurance Plans, Medicare Advantage, and traditional Medicare insurance plans.</p>
 					<p>Patients who choose SHP providers have access to personalized care coordination, transitional care management, and optimized specialist referrals.</p>
 					<p>As a clinical integration network and an ACO, we strive to provide improved clinical quality, greater efficiency, improved collaboration, better access to care and long-term cost-control.</p>
