Updating news article for April 22 - HIMSS article + PDF

--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,29 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+					<li class="timeline-inverted">
+						<div class="timeline-meta">
+							<div class="meta_details">by Health Management Technology</div>
+						</div>
+						<div class="timeline-icon">
+							<div class="date">Apr.
+								<span>22</span>
+							</div>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-body">
+								<div class="post-item">
+									<h2 class="post-title">
+										<a href="{{ path('_p_d_f_view', {'file': 'SHP-HIMSS16.pdf'}) }}">HIMSS16 Post-Show Roundup</a>
+									</h2>
+									<div class="post-content">
+										<p>The 2016 HIMSS Connected Health Survey unveiled at the HIMSS Annual Conference and Exhibition in Las Vegas paints an optimistic picture surrounding the emerging trend of connectivity within the healthcare ecosystem. With more than 50 percent of respondents indicating their hospital currently uses three or more connected&hellip;</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+
 					<li>
 						<div class="timeline-meta">
 							<div class="meta_details">by American Journal of Medical Care</div>
